# liquipedia-convert

./: .gitignore  README.md  bracket_join.py  convert_navbox.py  convert_team_card.py  countries.json  main.py  pyproject.toml  races.json
conversion/: argument_conversion.py  bracket_conversion.py  classes.py  convert.py  convert_tournaments.py  countries.py  default_option_values.py  my_wikitextparser.py  races.py
static/css/: style.css
static/js/: script.js
templates/: bracket_join.html  convert.html  convert_form.html  convert_result.html  header.html  index.html  navbox_conversion.html  team_card_conversion.html
